examples/error/hierachical_modelling_inlineembed2/ppError/error-HTMLXPATH.errorOutput
<span class="MBXMLUTILS_ERROROUTPUT"><a href="submodel/Untergruppe.xml?xpath=/{http://www.mbsim-env.de/MBSim}Group[1]/{http://www.mbsim-env.de/MBSim}objects[1]/{http://www.mbsim-env.de/MBSim}RigidBody[1]/{http://www.mbsim-env.de/MBSim}plotFeature[1]/@value&line=11">submodel/Untergruppe.xml:11:/Group[1]/objects[1]/RigidBody[1]/plotFeature[1]/@value</a>:<br/><span class="MBXMLUTILS_MSG">QName attribute value defined by '[uri]localname' syntax but no ] found.
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsim.xml?xpath=/{http://www.mbsim-env.de/MBSim}DynamicSystemSolver[1]/{http://www.mbsim-env.de/MBSim}groups[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]/{http://www.mbsim-env.de/MBSim}Group[1]/{http://www.mbsim-env.de/MBSim}groups[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[2]&ecount=1&line=55">MBS.mbsim.xml:55:/DynamicSystemSolver[1]/groups[1]/p:Embed[1]/Group[1]/groups[1]/p:Embed[2]</a>:<br/><span class="MBXMLUTILS_MSG">included from here
</span></span><span class="MBXMLUTILS_ERROROUTPUT MBXMLUTILS_SSE"><a href="MBS.mbsx?xpath=/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]/{http://www.mbsim-env.de/MBSimXML}MBSimProject[1]/{http://www.mbsim-env.de/MBXMLUtils}Embed[1]&ecount=1&line=8">MBS.mbsx:8:/p:Embed[1]/mx:MBSimProject[1]/p:Embed[1]</a>:<br/><span class="MBXMLUTILS_MSG">included from here</span></span>
